testsuite/bad/struct05.jl

typedef struct WrongSpelled *Dab;

struct SpelledWrong {
  int x;
}


int main() {
  return 0;
}

